--- a/src/app/modules/admin/pages/companies/companies.component.html
+++ b/src/app/modules/admin/pages/companies/companies.component.html
@@ -1,1 +1,4 @@
-<p>companies works!</p>
+<div class="container">
+  <app-table [titulos]="titulos" [datos]="datos" (editar)="onEditar($event)"
+    (eliminar)="onEliminar($event)"></app-table>
+</div>
