--- a/src/app/modules/admin/pages/details-applicant/details-applicant.component.css
+++ b/src/app/modules/admin/pages/details-applicant/details-applicant.component.css
@@ -1,27 +1,32 @@
 .container {
-    background-color: #30a7af;
-  }
-  .img-fluid {
-    border-radius: 50%;
-    margin-bottom: 40px;
-    width: 150px;
-    height: 150px;
+  margin: 5%;
+  padding: 15px;
+  background-color: #FBFBFB;
+  box-shadow: 0px 0px 8px rgba(116, 113, 113, 0.219);
+}
+
+.img-fluid {
+  border-radius: 50%;
+  margin-bottom: 30px;
+  width: 150px;
+  height: 150px;
   border: solid 1px #e6f3f3;
-  
-  }
-  
-  .title {
-    font-size: 20px;
-    font-weight: 600;
-    color:  #7bc982;
-  }
-  small {
-    padding: 10px;
-    font-weight: 700;
-  }
-  p {
-    font-weight: 500;
-    font-size: 14px;
-   
-  }
-  
+}
+
+.title1 {
+  font-size: 24px;
+  font-weight: 550;
+  color: #A3D867;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: 550;
+  color:  #00939E;
+}
+
+p {
+  font-weight: 400;
+  font-size: 15px;
+  text-align: justify;
+}
