Modificacion de vista de compania

--- a/src/app/modules/admin/pages/details-company/details-company.component.html
+++ b/src/app/modules/admin/pages/details-company/details-company.component.html
@@ -1,4 +1,48 @@
-<div class="container ">
+
+  <mat-card class="container-company">
+      
+      <mat-card-header>
+          <mat-card-title><h2 class="titulo-company">SOFKA TECHNOLOGIES</h2></mat-card-title>
+      </mat-card-header>
+
+      <div class="separador"></div>
+              <mat-card-content class="card-company"> 
+                  <p>Servicios y tecnlogia de la informacion</p>
+                  <p>Cuidamos nuestro entorno, multiplicando experiencias exitosas</p>
+                  <p>Mendoza, Argentina</p>
+              </mat-card-content>
+      
+      <div class="separador"></div>
+
+      <mat-card-header>
+          <h2 class="titulo-company">RESUMEN</h2>
+      </mat-card-header>
+
+      <div class="separador"></div>
+
+      <mat-card-content class="card-company"> 
+       <p>Luego de un proceso largo y arduo de pensar e identificar como compañia que nos mueve y nos orienta, construimos nuestro proposito con un resultado completamente enfocado en lo que hacemos y profesamos. "Cuidamos nuestro entorno, multiplicando experiencias exitosas" Cuidamos nuestros clientes, sofkinaos y comunidad Multiplicando nuestra excelencia tecnica, creando comunidades practicas y gestionando nuestro conocimiento.</p>
+      </mat-card-content>
+
+      <mat-card-header>
+          <h2 class="titulo-company">DATOS</h2>
+      </mat-card-header>
+      <div class="separador"></div>
+
+      <mat-card-content class="card-company">
+      <p><b>Telefono:</b> 2668907</p>
+      <p><b>Sitio Web:</b> Http://www.Sofka.com</p>
+      <p><b>Mail:</b> Sofka@gmail.com</p>
+      <p><b>Sector:</b> Servicios y Tecnologias de la informacion</p>
+      <p><b>Tamaño de la Empresa</b> 501-1000 empleados</p>
+      <p><b>Fundacion:</b> 2013</p>
+      <p><b>Especialidades:</b>Arquitecturas Reactivas, DevOps, Automatizacion, Agilidad, SAP, Integracion, Innovacion, Testing, Agile Testing, Programacion Reactiva, Programacion Limpia, Arquitectura Limpia, Pruebas Performance, RPA E Inteligencia artificial</p>
+  </mat-card-content>
+  </mat-card>
+
+
+<!--CONTENIDO ANTIGUO-->
+<!--<div class="container ">
     <div class="row">
       <div class="col-10 ">
         <h3 class="lead text-uppercase title fw-bold">Sofka Technologies</h3>
@@ -68,4 +112,4 @@
       </div>
     </div>
   </div>
-  
+-->
