--- a/src/app/modules/admin/components/table/table.component.html
+++ b/src/app/modules/admin/components/table/table.component.html
@@ -1,70 +1,57 @@
-<mat-form-field class="custom-form-field">
-  <mat-label>Buscar</mat-label>
-  <input matInput (keyup)="onBuscar($event)" />
-</mat-form-field>
+<div class="mat-elevation-z2">
+  
+  <mat-form-field class="custom-form-field">
+    <mat-label>Buscar</mat-label>
+    <input matInput (keyup)="onBuscar($event)" />
+  </mat-form-field>
 
-<table mat-table [dataSource]="datos" class="mat-elevation-z2">
-  <!-- ID Column -->
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef>ID</th>
-    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-  </ng-container>
-
-  <!-- Nombre Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Nombre</th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-  </ng-container>
-
-  <!-- Apellido Column -->
-  <ng-container matColumnDef="surname">
-    <th mat-header-cell *matHeaderCellDef>Apellido</th>
-    <td mat-cell *matCellDef="let element">{{ element.surname }}</td>
-  </ng-container>
-
-  <!-- Apellido Column -->
-  <ng-container matColumnDef="emailAddress">
-    <th mat-header-cell *matHeaderCellDef>Email</th>
-    <td mat-cell *matCellDef="let element">{{ element.emailAddress }}</td>
-  </ng-container>
-
-  <!-- Apellido Column -->
-  <ng-container matColumnDef="gender">
-    <th mat-header-cell *matHeaderCellDef>Genero</th>
-    <td mat-cell *matCellDef="let element">{{ element.gender| titlecase }}</td>
-  </ng-container>
-
-    <!-- Apellido Column -->
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef>Estado</th>
-      <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+  <mat-table [dataSource]="dataSource">
+    <!-- Index Column -->
+    <ng-container matColumnDef="index">
+      <mat-header-cell *matHeaderCellDef>Index</mat-header-cell>
+      <mat-cell *matCellDef="let usuario; let i = index">{{ getCurrentIndex(i) }}</mat-cell>
     </ng-container>
 
-  <!-- Acciones Column -->
-  <ng-container matColumnDef="acciones">
-    <th mat-header-cell *matHeaderCellDef>Acciones</th>
-    <td mat-cell *matCellDef="let element" class="icon">
-      <div class="action-icons">
-        <button class="custom-edit-button"
-          mat-icon-button
-          (click)="onEditar(element)"
-          matTooltip="Ver Perfil"
-        >
+    <!-- Nombre Column -->
+    <ng-container matColumnDef="nombre">
+      <mat-header-cell *matHeaderCellDef>Nombre</mat-header-cell>
+      <mat-cell *matCellDef="let usuario">{{ usuario.nombre }}</mat-cell>
+    </ng-container>
+
+    <!-- Email Column -->
+    <ng-container matColumnDef="email">
+      <mat-header-cell *matHeaderCellDef>Email</mat-header-cell>
+      <mat-cell *matCellDef="let usuario">{{ usuario.email }}</mat-cell>
+    </ng-container>
+
+    <!-- CUIL Column -->
+    <ng-container matColumnDef="cuil">
+      <mat-header-cell *matHeaderCellDef>CUIL</mat-header-cell>
+      <mat-cell *matCellDef="let usuario">{{ usuario.cuil }}</mat-cell>
+    </ng-container>
+
+    <!-- Acciones Column -->
+    <ng-container matColumnDef="acciones">
+      <mat-header-cell *matHeaderCellDef>Acciones</mat-header-cell>
+      <mat-cell *matCellDef="let usuario">
+        <button mat-icon-button (click)="editarUsuario(usuario)">
           <mat-icon>visibility</mat-icon>
         </button>
-        <button
-          mat-icon-button
-          color="warn"
-          (click)="onEliminar(element)"
-          matTooltip="Bloquear Perfil"
-        >
-          <mat-icon>block</mat-icon>
+        <button mat-icon-button color="warn" (click)="eliminarUsuario(usuario)">
+          <mat-icon>delete</mat-icon>
         </button>
-      </div>
-    </td>
-  </ng-container>
+      </mat-cell>
+    </ng-container>
 
-  <!-- Definición de las filas -->
-  <tr mat-header-row *matHeaderRowDef="titulos"></tr>
-  <tr mat-row *matRowDef="let row; columns: titulos"></tr>
-</table>
+    <!-- Definir el orden de las columnas -->
+    <mat-header-row *matHeaderRowDef="title"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: title"></mat-row>
+  </mat-table>
+
+  <mat-paginator
+    [length]="totalElements"
+    [pageSize]="pageSize"
+    [pageSizeOptions]="pageSizeOptions"
+    (page)="onPageChanged($event)"
+  ></mat-paginator>
+</div>
