Corrección de nombre de desarrollador

--- a/src/app/modules/admin/pages/details-applicant/details-applicant.component.html
+++ b/src/app/modules/admin/pages/details-applicant/details-applicant.component.html
@@ -4,7 +4,7 @@
       <img class="img-fluid" src="../../../../../assets/img/perfil.jpg" alt="Foto de perfil">
     </div>
     <div class="col-md-10">
-      <p class="title1ng ">Maria Alejandra Polo</p>
+      <p class="title1">Maria Alejandra Polo</p>
       <p><strong>Mendoza, Argentina</strong></p>
       <p> <i class="bi bi-envelope-at"></i>Email: maria@gmail.com</p>
       <p><i class="bi bi-telephone"></i>Teléfono: +542615896589</p>
