--- a/src/app/modules/admin/pages/applicants/applicants.component.html
+++ b/src/app/modules/admin/pages/applicants/applicants.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-table
-    [dataSource]="data"
+    [dataSource]="applicanst"
     [title]="title"
     [pageSizeOptions]="[5, 10, 20]"
     [totalElements]="totalElements"
