--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -19,26 +19,39 @@
             <mat-label>Email</mat-label>
             <input formControlName="email" matInput placeholder="Ingrese el email">
             <mat-error *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched">
-              El nit de la email
+              El email es requerido
             </mat-error>
           </mat-form-field>
           <mat-form-field class="full-width">
-            <mat-label>Password</mat-label>
-            <input formControlName="password" matInput placeholder="Ingrese el password">
+            <mat-label>Contraseña</mat-label>
+            <input formControlName="password" [type]="hidePassword ? 'password' : 'text'" matInput placeholder="Ingrese la contraseña">
+            <button mat-icon-button matSuffix (click)="togglePasswordVisibility()">
+              <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+            </button>
             <mat-error *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched">
-              El email de la empresa es requerido
+              La contraseña no tiene un formato valido
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field class="full-width">
+            <mat-label>Confirmar Contraseña</mat-label>
+            <input formControlName="confirmpassword" [type]="hidePassword ? 'password' : 'text'" matInput placeholder="Ingrese la contraseña nuevamente">
+            <button mat-icon-button matSuffix (click)="togglePasswordVisibility()">
+              <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+            </button>
+            <mat-error *ngIf="registerForm.get('confirmpassword')?.invalid && registerForm.get('confirmpassword')?.touched">
+              La contraseña no tiene un formato valido
             </mat-error>
           </mat-form-field>
           <mat-form-field class="full-width">
             <mat-label>Cuil</mat-label>
-            <input formControlName="cuil" matInput placeholder="Ingrese el cuil">
+            <input formControlName="cuil" matInput placeholder="Ingrese el cuil. Utilize el formato XX-XXXXXXXX-X">
             <mat-error *ngIf="registerForm.get('cuil')?.invalid && registerForm.get('cuil')?.touched">
               El telefono de la empresa es requerido
             </mat-error>
           </mat-form-field>
           <div class="button-container">
-            <button mat-raised-button color="primary" >Registrarse</button>
-            <button mat-raised-button color="accent" type="submit" routerLink="/auth/login">Iniciar sesión</button>
+            <button class="btn-primary" mat-raised-button color="primary" >Registrarse</button>
+            <button class="btn-secondary" mat-raised-button color="accent" type="submit" routerLink="/auth/login">Iniciar sesión</button>
           </div>
         </form>
       </mat-card-content>
