Vista recuperar contraseña

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -33,6 +33,7 @@
           </div>
           <div class="forgot-password mt-2">
             <button mat-button (click)="forgotPassword()">Olvidé mi contraseña</button>
+            <button mat-button routerLink="/auth/recover">Olvidé mi contraseña</button>
           </div>
         </form>
       </mat-card-content>
