Actualizacion de registro usuario, se mergea la rama feature/registro-usuario-empresa

--- a/src/app/modules/auth/pages/register/register.component.css
+++ b/src/app/modules/auth/pages/register/register.component.css
@@ -28,6 +28,9 @@
     color: var(--color-secondary);
     font-weight: 600;
   }
+  mat-icon{
+    color: var(--color-primary);
+  }
 
   .mat-mdc-card{
     background-color: var(--color-primary);
